--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         }
                     }
   
-                    displayText(); // Call to display text on each frame
+                    //displayText(); // Call to display text on each frame
   
                     window.requestAnimationFrame(loop, canvas);
                 };
